// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Text Field Test: as number field 1`] = `
<View>
  <Text />
  <View
    style={
      Object {
        "paddingHorizontal": 10,
        "width": "100%",
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "borderBottomWidth": 1,
          "borderColor": "#86939e",
          "flexDirection": "row",
          "transform": Array [
            Object {
              "translateX": 0,
            },
          ],
        }
      }
    >
      <TextInput
        allowFontScaling={true}
        editable={true}
        keyboardType="numeric"
        onChangeText={[Function]}
        rejectResponderTermination={true}
        schema={
          Object {
            "title": "myVal",
            "type": "number",
          }
        }
        secureTextEntry={false}
        style={
          Object {
            "alignSelf": "center",
            "color": "black",
            "flex": 1,
            "fontSize": 18,
            "minHeight": 40,
          }
        }
        testID="RNE__Input__text-input"
        underlineColorAndroid="transparent"
      />
    </View>
  </View>
  <View />
</View>
`;

exports[`Text Field Test: as number field with number 1`] = `
<View>
  <Text />
  <View
    style={
      Object {
        "paddingHorizontal": 10,
        "width": "100%",
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "borderBottomWidth": 1,
          "borderColor": "#86939e",
          "flexDirection": "row",
          "transform": Array [
            Object {
              "translateX": 0,
            },
          ],
        }
      }
    >
      <TextInput
        allowFontScaling={true}
        editable={true}
        keyboardType="numeric"
        onChangeText={[Function]}
        rejectResponderTermination={true}
        schema={
          Object {
            "title": "myVal",
            "type": "number",
          }
        }
        secureTextEntry={false}
        style={
          Object {
            "alignSelf": "center",
            "color": "black",
            "flex": 1,
            "fontSize": 18,
            "minHeight": 40,
          }
        }
        testID="RNE__Input__text-input"
        underlineColorAndroid="transparent"
        value={5432}
      />
    </View>
  </View>
  <View />
</View>
`;

exports[`Text Field Test: as number field with string 1`] = `
<View>
  <Text />
  <View
    style={
      Object {
        "paddingHorizontal": 10,
        "width": "100%",
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "borderBottomWidth": 1,
          "borderColor": "#86939e",
          "flexDirection": "row",
          "transform": Array [
            Object {
              "translateX": 0,
            },
          ],
        }
      }
    >
      <TextInput
        allowFontScaling={true}
        editable={true}
        keyboardType="numeric"
        onChangeText={[Function]}
        rejectResponderTermination={true}
        schema={
          Object {
            "title": "myVal",
            "type": "number",
          }
        }
        secureTextEntry={false}
        style={
          Object {
            "alignSelf": "center",
            "color": "black",
            "flex": 1,
            "fontSize": 18,
            "minHeight": 40,
          }
        }
        testID="RNE__Input__text-input"
        underlineColorAndroid="transparent"
        value="gfsdfasd"
      />
    </View>
  </View>
  <View />
</View>
`;

exports[`Text Field Test: as number field with string number 1`] = `
<View>
  <Text />
  <View
    style={
      Object {
        "paddingHorizontal": 10,
        "width": "100%",
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "borderBottomWidth": 1,
          "borderColor": "#86939e",
          "flexDirection": "row",
          "transform": Array [
            Object {
              "translateX": 0,
            },
          ],
        }
      }
    >
      <TextInput
        allowFontScaling={true}
        editable={true}
        keyboardType="numeric"
        onChangeText={[Function]}
        rejectResponderTermination={true}
        schema={
          Object {
            "title": "myVal",
            "type": "number",
          }
        }
        secureTextEntry={false}
        style={
          Object {
            "alignSelf": "center",
            "color": "black",
            "flex": 1,
            "fontSize": 18,
            "minHeight": 40,
          }
        }
        testID="RNE__Input__text-input"
        underlineColorAndroid="transparent"
        value="125"
      />
    </View>
  </View>
  <View />
</View>
`;

exports[`Text Field Test: as slider field 1`] = `
<View>
  <Text />
  <View
    style={
      Object {
        "paddingHorizontal": 10,
        "width": "100%",
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "borderBottomWidth": 1,
          "borderColor": "#86939e",
          "flexDirection": "row",
          "transform": Array [
            Object {
              "translateX": 0,
            },
          ],
        }
      }
    >
      <TextInput
        allowFontScaling={true}
        editable={true}
        keyboardType="numeric"
        onChangeText={[Function]}
        rejectResponderTermination={true}
        schema={
          Object {
            "format": "slider",
            "title": "myVal",
            "type": "number",
          }
        }
        secureTextEntry={false}
        style={
          Object {
            "alignSelf": "center",
            "color": "black",
            "flex": 1,
            "fontSize": 18,
            "minHeight": 40,
          }
        }
        testID="RNE__Input__text-input"
        underlineColorAndroid="transparent"
      />
    </View>
  </View>
  <View />
</View>
`;

exports[`Text Field Test: as slider field with number 1`] = `
<View>
  <Text />
  <View
    style={
      Object {
        "paddingHorizontal": 10,
        "width": "100%",
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "borderBottomWidth": 1,
          "borderColor": "#86939e",
          "flexDirection": "row",
          "transform": Array [
            Object {
              "translateX": 0,
            },
          ],
        }
      }
    >
      <TextInput
        allowFontScaling={true}
        editable={true}
        keyboardType="numeric"
        onChangeText={[Function]}
        rejectResponderTermination={true}
        schema={
          Object {
            "format": "slider",
            "title": "myVal",
            "type": "number",
          }
        }
        secureTextEntry={false}
        style={
          Object {
            "alignSelf": "center",
            "color": "black",
            "flex": 1,
            "fontSize": 18,
            "minHeight": 40,
          }
        }
        testID="RNE__Input__text-input"
        underlineColorAndroid="transparent"
        value={5432}
      />
    </View>
  </View>
  <View />
</View>
`;

exports[`Text Field Test: as slider field with string 1`] = `
<View>
  <Text />
  <View
    style={
      Object {
        "paddingHorizontal": 10,
        "width": "100%",
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "borderBottomWidth": 1,
          "borderColor": "#86939e",
          "flexDirection": "row",
          "transform": Array [
            Object {
              "translateX": 0,
            },
          ],
        }
      }
    >
      <TextInput
        allowFontScaling={true}
        editable={true}
        keyboardType="numeric"
        onChangeText={[Function]}
        rejectResponderTermination={true}
        schema={
          Object {
            "format": "slider",
            "title": "myVal",
            "type": "number",
          }
        }
        secureTextEntry={false}
        style={
          Object {
            "alignSelf": "center",
            "color": "black",
            "flex": 1,
            "fontSize": 18,
            "minHeight": 40,
          }
        }
        testID="RNE__Input__text-input"
        underlineColorAndroid="transparent"
        value="gfsdfasd"
      />
    </View>
  </View>
  <View />
</View>
`;

exports[`Text Field Test: as slider field with string number 1`] = `
<View>
  <Text />
  <View
    style={
      Object {
        "paddingHorizontal": 10,
        "width": "100%",
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "borderBottomWidth": 1,
          "borderColor": "#86939e",
          "flexDirection": "row",
          "transform": Array [
            Object {
              "translateX": 0,
            },
          ],
        }
      }
    >
      <TextInput
        allowFontScaling={true}
        editable={true}
        keyboardType="numeric"
        onChangeText={[Function]}
        rejectResponderTermination={true}
        schema={
          Object {
            "format": "slider",
            "title": "myVal",
            "type": "number",
          }
        }
        secureTextEntry={false}
        style={
          Object {
            "alignSelf": "center",
            "color": "black",
            "flex": 1,
            "fontSize": 18,
            "minHeight": 40,
          }
        }
        testID="RNE__Input__text-input"
        underlineColorAndroid="transparent"
        value="125"
      />
    </View>
  </View>
  <View />
</View>
`;

exports[`Text Field Test: date with content 1`] = `
<View>
  <Text />
  <View
    style={
      Object {
        "paddingHorizontal": 10,
        "width": "100%",
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "borderBottomWidth": 1,
          "borderColor": "#86939e",
          "flexDirection": "row",
          "transform": Array [
            Object {
              "translateX": 0,
            },
          ],
        }
      }
    >
      <TextInput
        allowFontScaling={true}
        editable={true}
        keyboardType="default"
        onChangeText={[Function]}
        rejectResponderTermination={true}
        schema={
          Object {
            "format": "date",
            "title": "dateVal",
            "type": "string",
          }
        }
        secureTextEntry={false}
        style={
          Object {
            "alignSelf": "center",
            "color": "black",
            "flex": 1,
            "fontSize": 18,
            "minHeight": 40,
          }
        }
        testID="RNE__Input__text-input"
        underlineColorAndroid="transparent"
        value="2012-01-11"
      />
    </View>
  </View>
  <View />
</View>
`;

exports[`Text Field Test: datetime-local with content 1`] = `
<View>
  <Text />
  <View
    style={
      Object {
        "paddingHorizontal": 10,
        "width": "100%",
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "borderBottomWidth": 1,
          "borderColor": "#86939e",
          "flexDirection": "row",
          "transform": Array [
            Object {
              "translateX": 0,
            },
          ],
        }
      }
    >
      <TextInput
        allowFontScaling={true}
        editable={true}
        keyboardType="default"
        onChangeText={[Function]}
        rejectResponderTermination={true}
        schema={
          Object {
            "format": "date-time",
            "title": "dateVal",
            "type": "string",
          }
        }
        secureTextEntry={false}
        style={
          Object {
            "alignSelf": "center",
            "color": "black",
            "flex": 1,
            "fontSize": 18,
            "minHeight": 40,
          }
        }
        testID="RNE__Input__text-input"
        underlineColorAndroid="transparent"
        value="2018-02-22T07:55"
      />
    </View>
  </View>
  <View />
</View>
`;

exports[`Text Field Test: empty datetime-local field 1`] = `
<View>
  <Text />
  <View
    style={
      Object {
        "paddingHorizontal": 10,
        "width": "100%",
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "borderBottomWidth": 1,
          "borderColor": "#86939e",
          "flexDirection": "row",
          "transform": Array [
            Object {
              "translateX": 0,
            },
          ],
        }
      }
    >
      <TextInput
        allowFontScaling={true}
        editable={true}
        keyboardType="default"
        onChangeText={[Function]}
        rejectResponderTermination={true}
        schema={
          Object {
            "format": "date",
            "title": "dateVal",
            "type": "string",
          }
        }
        secureTextEntry={false}
        style={
          Object {
            "alignSelf": "center",
            "color": "black",
            "flex": 1,
            "fontSize": 18,
            "minHeight": 40,
          }
        }
        testID="RNE__Input__text-input"
        underlineColorAndroid="transparent"
      />
    </View>
  </View>
  <View />
</View>
`;

exports[`Text Field Test: namefield 1`] = `
<View>
  <Text />
  <View
    style={
      Object {
        "paddingHorizontal": 10,
        "width": "100%",
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "borderBottomWidth": 1,
          "borderColor": "#86939e",
          "flexDirection": "row",
          "transform": Array [
            Object {
              "translateX": 0,
            },
          ],
        }
      }
    >
      <TextInput
        allowFontScaling={true}
        editable={true}
        keyboardType="default"
        onChangeText={[Function]}
        rejectResponderTermination={true}
        schema={
          Object {
            "title": "guestName",
            "type": "string",
          }
        }
        secureTextEntry={false}
        style={
          Object {
            "alignSelf": "center",
            "color": "black",
            "flex": 1,
            "fontSize": 18,
            "minHeight": 40,
          }
        }
        testID="RNE__Input__text-input"
        underlineColorAndroid="transparent"
      />
    </View>
  </View>
  <View />
</View>
`;

exports[`Text Field Test: namefield changed va 1`] = `
<View>
  <Text />
  <View
    style={
      Object {
        "paddingHorizontal": 10,
        "width": "100%",
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "borderBottomWidth": 1,
          "borderColor": "#86939e",
          "flexDirection": "row",
          "transform": Array [
            Object {
              "translateX": 0,
            },
          ],
        }
      }
    >
      <TextInput
        allowFontScaling={true}
        editable={true}
        keyboardType="default"
        onChangeText={[Function]}
        rejectResponderTermination={true}
        schema={
          Object {
            "title": "guestName",
            "type": "string",
          }
        }
        secureTextEntry={false}
        style={
          Object {
            "alignSelf": "center",
            "color": "black",
            "flex": 1,
            "fontSize": 18,
            "minHeight": 40,
          }
        }
        testID="RNE__Input__text-input"
        underlineColorAndroid="transparent"
        value="myval"
      />
    </View>
  </View>
  <View />
</View>
`;

exports[`Text Field Test: password field 1`] = `
<View>
  <Text />
  <View
    style={
      Object {
        "paddingHorizontal": 10,
        "width": "100%",
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "borderBottomWidth": 1,
          "borderColor": "#86939e",
          "flexDirection": "row",
          "transform": Array [
            Object {
              "translateX": 0,
            },
          ],
        }
      }
    >
      <TextInput
        allowFontScaling={true}
        editable={true}
        keyboardType="default"
        onChangeText={[Function]}
        rejectResponderTermination={true}
        schema={
          Object {
            "format": "password",
            "title": "passportWellYou",
            "type": "string",
          }
        }
        secureTextEntry={true}
        style={
          Object {
            "alignSelf": "center",
            "color": "black",
            "flex": 1,
            "fontSize": 18,
            "minHeight": 40,
          }
        }
        testID="RNE__Input__text-input"
        underlineColorAndroid="transparent"
      />
    </View>
  </View>
  <View />
</View>
`;

exports[`Text Field Test: time with content 1`] = `
<View>
  <Text />
  <View
    style={
      Object {
        "paddingHorizontal": 10,
        "width": "100%",
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "borderBottomWidth": 1,
          "borderColor": "#86939e",
          "flexDirection": "row",
          "transform": Array [
            Object {
              "translateX": 0,
            },
          ],
        }
      }
    >
      <TextInput
        allowFontScaling={true}
        editable={true}
        keyboardType="default"
        onChangeText={[Function]}
        rejectResponderTermination={true}
        schema={
          Object {
            "format": "time",
            "title": "dateVal",
            "type": "string",
          }
        }
        secureTextEntry={false}
        style={
          Object {
            "alignSelf": "center",
            "color": "black",
            "flex": 1,
            "fontSize": 18,
            "minHeight": 40,
          }
        }
        testID="RNE__Input__text-input"
        underlineColorAndroid="transparent"
        value="16:20"
      />
    </View>
  </View>
  <View />
</View>
`;
